--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,11 +14,11 @@ layout: default
     
     {{ content }}
 
-    {% if site.data.previous_offering and site.data.previous_offering.offerings and site.data.previous_offering.offerings.size > 0 %}
+    {% if site.data.course_material and site.data.course_material.materials and site.data.course_material.materials.size > 0 %}
     <h2>Course Materials</h2>
     <ul class="previous-offerings">
-    {% for offer in site.data.previous_offering.offerings %}
-    <li><a href="{{ offer.url }}">{{offer.title}}</a></li>
+    {% for material in site.data.course_material.materials %}
+    <li><a href="{{ material.url }}">{{material.title}}</a></li>
     <br />
     {% endfor %}
     </ul>
