--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,49 +6,61 @@ layout: default
 
     <!-- <h1>{{ site.course_name }} <span style="font-size: 20px;color: #0006;">/ {{ site.course_semester }} </span></h1> -->
 
-    <!-- {% include announcements.html %} -->
-    <br />
+    <!-- {% include announcements.html %}
+    <br /> -->
 
     <h2>Course Description</h2>
     <p>{{ site.course_description }}</p>
     
     {{ content }}
 
-    {% if site.data.course_material and site.data.course_material.materials and site.data.course_material.materials.size > 0 %}
-    <h2>Course Materials</h2>
-    <ul class="previous-offerings">
-    {% for material in site.data.course_material.materials %}
-    <li><a href="{{ material.url }}">{{material.title}}</a></li>
-    <br />
-    {% endfor %}
-    </ul>
+    {% if site.data.course_materials and site.data.course_materials.materials and site.data.course_materials.materials.size > 0 %}
+        <h2>Course Materials</h2>
+        <ul class="homepage-bullets">
+            {% for material in site.data.course_materials.materials %}
+                <li><a href="{{ material.url }}">{{material.title}}</a></li>
+                <br />
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% if site.data.previous_presentations and site.data.previous_presentations.presentations and site.data.previous_presentations.presentations.size > 0 %}
+        <h2>Previous Presentations</h2>
+        <ul class="homepage-bullets">
+            {% for presentation in site.data.previous_presentations.presentations %}
+                <li>{{presentation.title}}</li>
+                <br />
+            {% endfor %}
+        </ul>
     {% endif %}
 
     <br>
-    <div>
+
+    <div class="profile-pic-gallary ">
+        <h2>Instructors</h2>
+        {% for ins in site.data.people.instructors %}
+            <div class="image--cover-container">
+                <img src="{{ins.profile_pic | prepend: site.baseurl }}" class="image--cover">
+                {% if ins.webpage %}
+                    <p><a href="{{ ins.webpage }}">{{ins.name}}</a></p>
+                {% else %}
+                    <p>{{ins.name}}</p>
+                {% endif %}
+            </div>
+        {% endfor %}
+    </div>
+
+    <!-- <div>
         <div style="width:35%; float: left">
-            <!-- <h2>Instructors</h2> -->
-            <!-- <div class="image--cover-container">
+            <h2>Instructors</h2>
+            <div class="image--cover-container">
                 <img src="{{site.data.people.instructor.profile_pic | prepend: site.baseurl }}" class="image--cover">
                 <p>{{site.data.people.instructor.name}}</p>
-            </div> -->
-
-            <div class="profile-pic-gallary ">
-                <h2>Instructors</h2>
-                {% for ins in site.data.people.instructors %}
-                <div class="image--cover-container">
-                    <img src="{{ins.profile_pic | prepend: site.baseurl }}" class="image--cover">
-                    {% if ins.webpage %}
-                    <p><a href="{{ ins.webpage }}">{{ins.name}}</a></p>
-                    {% else %}
-                    <p>{{ins.name}}</p>
-                    {% endif %}
-                </div>
-                {% endfor %}
             </div>
+
         </div>
 
-        <!-- <div style="width:65%; float: left">
+        <div style="width:65%; float: left">
             <div class="profile-pic-gallary ">
                 <h2>Teaching Assistants</h2>
                 {% for ta in site.data.people.teaching_assistants %}
@@ -62,6 +74,7 @@ layout: default
                 </div>
                 {% endfor %}
             </div>
-        </div> -->
-    </div>
+        </div>
+    </div> -->
+
 </div>
