--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -16,7 +16,7 @@
 }
 
 .site-title, .site-title a {
-    font-size: 26px;
+    font-size: 30px;
 /* 		margin-top: 15px;
     line-height: 40px; */
     letter-spacing: -1px;
@@ -37,6 +37,7 @@
 
 .site-header .wrapper {
 	padding-top: 20px;
+	padding-bottom: 5px;
 	position: relative;
 }
 
@@ -218,6 +219,7 @@ z-index:999;
 }
 
 .schoolname {
+    font-size: 20px;
     color: $header-text-color;
 }
 
