--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -1,3 +1,4 @@
+<!-- hide lecture and assignment from the announcement box -->
 {% assign all_events = site.events | concat: site.lectures %}
 {% assign all_events = all_events | concat: site.assignments %}
 
@@ -8,11 +9,11 @@
     {% endunless %}
 {% endfor %}
 
-{% assign all_events = events_to_show | concat: site.announcements %}
+{% assign all_events = site.announcements %}
 {% assign all_events_sorted = all_events | sort: 'date' | reverse %}
 
 {% if all_events_sorted.size > 0 %}
-<div class="announcement-box" style="margin-top:30px">
+<div class="announcement-box">
 <h2>Updates</h2>
 <ul>
     {% for n in all_events_sorted limit:7 %}
