--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -422,8 +422,8 @@ a.tosu {
 }
 
 .announcement-box {
-    padding: 15px;
-    margin-bottom: 20px;
+    padding: 10px 20px 5px 20px;
+    margin-bottom: 5px;
     border: 1px solid transparent;
     border-radius: 4px;
     background-color: #fcf8e3;
